[package]
name = "thirsty-broker"
version = "0.1.0"
edition = "2021"

[dependencies]
thirsty-support = { git = "https://github.com/ChristopherJMiller/thirsty-support.git" }
rumqtt = "0.31.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
diesel = { version = "1.4", features = ["postgres"] }
dotenv = "0.15"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
prometheus = "0.13"
lazy_static = "1.4.0"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", rev = "a062933c1b109949c618b0dba296ac33e4b1a105" }

[features]
default = ["broker", "metrics"]
broker = []
metrics = []
